still working on notifications, observer and connecting to game work. makeMove does not